Resolve Issue: Add paddint-top on mobile screen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -523,7 +523,7 @@ body {
     padding-top: 15px;
   }
   .wrap-content.with-title {
-    padding-top: 110px;
+    padding-top: 130px;
   }
   .wrap-content {
     padding-bottom: 90px;
